--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+
+<body>
+
+<h1>My First Heading</h1>
+<p>Hello World.</p>
+
+</body>
+</html>
